<resources>
    <string name="app_name">SmartBarUI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="button_send">Enter a message</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_name">buttonOne</string>
    <string name="button_two">screenTwo</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="title_activity_screen3">Screen3</string>
    <string name="title_activity_screen4">Screen4</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_debug">Debug</string>
    <string name="error">Error</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="oops">Oops</string>
    <string name="finger_print_instructions">Thank You, In order to confirm your identity we need to
        check your fingerprint. Please place the finger in which you registered with on the scanner
        when prompted.</string>
    <string name="title_activity_debug_menu">DebugMenu</string>
    <string name="title_activity_idle">Idle</string>
    <string name="title_activity_prompt">Prompt</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="title_activity_pick_up">PickUp</string>
    <string name="lblPassword">Enter Your Password :</string>
    <string name="btn_submit">Submit</string>
    <string name="title_activity_store_finger">StoreFinger</string>
    <string name="title_activity_check_bac">CheckBAC</string>
    <string name="title_activity_confirm_drink">ConfirmDrink</string>
    <string name="title_activity_display_bac">DisplayBAC</string>
    <string name="display_bac_title">ThankYou, Your current Blood Alcohol Content is:</string>
    <string name="display_bac_passed">Please Enjoy Your Beverage Responsibly</string>
    <string name="display_bac_failure">Sorry,for your safety you your drink cannot be
                                        dispensed at this moment.</string>
    <string name="title_activity_done_with_new_user">DoneWithNewUser</string>
    <string name="done_w_user">Thank you, You are now registered, and may order drinks
                                        at any time.</string>
    <string name="title_activity_user_not_found">UserNotFound</string>
    <string name="user_not_found">Sorry, your username/password is incorrect.</string>
    <string name="mobile_app_question">Have you an account on our Smart Bar
                                                                Mobile App?</string>
    <string-array name="liquor_array">
        <item>Whiskey</item>
        <item>Gin</item>
        <item>Vodka</item>
        <item>Rum</item>
        <item>Tequila</item>
        <item>Brandy</item>
        <item>Cognac</item>
        <item>Bourbon</item>
        <item>Scotch</item>
        <item>Jaegermeister</item>
    </string-array>
    <string-array name="quant_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>
    <string-array name="soda_array">
        <item>Coke</item>
        <item>Sprite</item>
        <item>Tonic Water</item>
        <item>Lemon Juice</item>
        <item>Red Gatorade</item>
        <item>Blue Gatorade</item>
        <item>Ginger Ale</item>
        <item>Plain Soda</item>
        <item>Red Bull</item>
        <item>Misc. Mixer</item>
    </string-array>
    <string name="title_activity_test_wifi">TestWIFI</string>
    <string name="title_activity_test_usb">TestUSB</string>
    <string name="title_activity_test_acc">TestAcc</string>
    <string name="title_activity_idle_menu">IdleMenu</string>
    <string name="title_activity_pick_up_finger">PickUpFinger</string>
    <string name="title_activity_register_finger_print">RegisterFingerPrint</string>
    <string name="register_finger_print_prompt">Please hold your finger on the scanner.</string>
    <string name="title_activity_test_activityr">testActivityr</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_system_status">SystemStatus</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_asdf">asdf</string>
    <string name="title_activity_system_status2">SystemStatus2</string>
    <string name="bac_prompt">Please Breathe Into the Sensor for Your BAC</string>
    <string name="Ishmael">Call me Ishmael. Some years ago--never mind how long precisely--having
        little or no money in my purse, and nothing particular to interest me on shore, I thought I
        would sail about a little and see the watery part of the world. It is a way I have of driving
        off the spleen and regulating the circulation. Whenever I find myself growing grim about the
        mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily
        pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and
        especially whenever my hypos get such an upper hand of me, that it requires a strong moral
        principle to prevent me from deliberately stepping into the street, and methodically knocking
        people\'s hats off--then, I account it high time to get to sea as soon as I can. This is my
        substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his
        sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it,
        almost all men in their degree, some time or other, cherish very nearly the same feelings
        towards the ocean with me.</string>
    <string name="BestOTimes">It was the best of times, it was the worst of times, it was the age of
        wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of
        incredulity, it was the season of Light, it was the season of Darkness, it was the spring
        of hope, it was the winter of despair, we had everything before us, we had nothing before
        us, we were all going direct to Heaven, we were all going direct the other way - in short,
        the period was so far like the present period, that some of its noisiest authorities insisted
        on its being received, for good or for evil, in the superlative degree of comparison only.</string>
    <string name="command_list">Pick Commands</string>
    <string-array name="spinnerItems">
        <item>PiStatus</item>
        <item>FingerPrintStatus</item>
        <item>BACStatus</item>
        <item>ValveState</item>
        <item>LiquidLevels</item>
    </string-array>
    <string name="title_activity_display_queue">DisplayQueue</string>
    <string name="title_activity_liquid_levels">LiquidLevels</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_smart_bar_loading_screen">SmartBarLoadingScreen</string>
    <string-array name="vol_array">
        <item>Handle</item>
        <item>Fifth</item>
        <item>Liter</item>
        <item>Flask</item>
    </string-array>
    <string-array name="brand_array">
        <item>Windsor Canadian</item>
        <item>Rich and Rare</item>
        <item>Wild Turkey</item>
        <item>Seagram\'s</item>
        <item>Kessler</item>
        <item>Canadian Club</item>
        <item>Dewar\'s Scotch</item>
        <item>Canadian Mist</item>
        <item>Jack Daniels Tennessee Honey</item>
        <item>Evan William\'s</item>
        <item>Southern Comfort</item>
        <item>Maker\'s Mark</item>
        <item>Johnnie Walker</item>
        <item>Black Velvet</item>
        <item>Jameson Irish</item>
        <item>Seagram\'s 7 Crown</item>
        <item>Fireball</item>
        <item>Jim Bean</item>
        <item>Crown Royal</item>
        <item>Jack Daniels No.7</item>
    </string-array>
    <string name="title_activity_container__screen">Container_Screen</string>
    <string name="title_activity_test_key_board">TestKeyBoard</string>
    <string name="title_activity_finger_pick_up">FingerPickUp</string>
    <string name="title_activity_order_drink_menu">OrderDrinkMenu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="smart_bar">SMART BAR</string>
    <string name="smart_bar_actionbar">Smart Bar</string>
    <string name="login_button">Login</string>
    <string name="new_user_button">New User</string>
    <string name="login_actionbar">Log In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_login">User Login</string>
    <string name="enter_password">Password</string>
    <string name="email_hint">Username</string>
    <string name="new_user_actionbar">Create Account</string>
    <string name="welcome_new_user1">Welcome to Smart Bar!</string>
    <string name="welcome_new_user2">Please enter a user login and password.</string>
    <string name="verify_button">Register</string>
    <string name="enter_age">Age</string>
    <string name="enter_weight">Weight</string>
    <string name="enter_sex">Sex</string>
    <string name="welcome">Hello!</string>
    <string name="welcome_prompt">Click ORDER to see what\'s currently in the Smart Bar inventory!</string>
    <string name="order_button">Order</string>
    <string name="library_browse_actionbar">Choose Drink</string>
    <string name="enter_drink">What would you like to drink?</string>
    <string name="drink_hint">ex: Whiskey Ginger</string>
    <string name="confirmation_actionbar">Confirm Order</string>
    <string name="order_confirmation1">So, you\'d like to order a</string>
    <string name="order_confirmation">{drink_order}</string>
    <string name="order_confirmation2">Is this correct?</string>
    <string name="order_drink_button">Yes, Order Drink</string>
    <string name="change_order_button">Change Order</string>
    <string name="customize">Customize Drink</string>
    <string name="tequila">Tequila</string>
    <string name="rum">Rum</string>
    <string name="vodka">Vodka</string>
    <string name="gin">Gin</string>
    <string name="done">Done!</string>
    <string name="drink_sent">Your order has been sent to the Smart Bar!
        When you\'re ready, enter your phone number into the touch screen interface.</string>
    <string name="thank_you">Thank you!</string>
    <string name="back_to_library_button">Back to Drink Library</string>
    <string name="action_logout">Logout</string>
    <string name="action_pin">Display Number</string>
    <string name="dismiss">Dismiss</string>
    <string name="action_forgot_user">Forgot Username</string>
    <string name="action_forgot_pass">Forgot Password</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_library_browse">LibraryBrowseActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="title_activity_customize_drink">CustomizeDrinkActivity</string>
    <string name="title_activity_drink_ordered">DrinkOrderedActivity</string>
    <string name="title_activity_mnew_user">MNewUserActivity</string>
    <string name="title_activity_test_key_board2">TestKeyBoard2</string>
    <string name="title_activity_venmo_web_view">VenmoWebViewActivity</string>
    <string name="title_activity_dispensing_screen">DispensingScreen</string>
    <string name="title_activity_maintenance_menu">MaintenanceMenu</string>
</resources>