<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cityscape_fullblur"
    android:orientation="vertical"
    android:id="@+id/login_activity"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000"
        android:orientation="vertical"
        android:layout_gravity="center">
    <TextView
        android:id="@+id/login_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <View
        android:id="@+id/bar_separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"/>





    <TextView
        android:id="@+id/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_login"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"

        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/type_email"
        android:inputType="textEmailAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"



        android:singleLine="true"
        android:layout_marginTop="20dp"

        android:textColor="@color/white"
        android:hint="@string/email_hint"
        android:textColorHint="@color/white"
        />

    <TextView
        android:id="@+id/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"

        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/type_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/enter_password"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/PinKey"
        android:text="@string/login_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        />
    </LinearLayout>

</LinearLayout>
