<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cityscape_fullblur"
    android:id="@+id/library_browse_activity"
    tools:context=".LibraryBrowseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#11ffffff"
        >
    <TextView
        android:id="@+id/enter_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="160dp"
        android:text="@string/enter_drink"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:typeface="serif" />

    <ListView
        android:id="@+id/drinkList"
        android:textColor="@color/white"
        android:background="#44000000"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp">
    </ListView>

    <View
        android:id="@+id/bar_separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="#C0C0C0"/>


    <EditText
        android:id="@+id/typeDrink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:hint="@string/drink_hint"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/white"/>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PinKey"
        android:layout_gravity="center"
        android:text="@string/order_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:onClick="libraryBrowseToConfirmation" />
    </LinearLayout>


</LinearLayout>
